--- a/src/gs_me/genomespy/index.html
+++ b/src/gs_me/genomespy/index.html
@@ -1,126 +1,144 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>GenomeSpy</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <head>
+        <title>GenomeSpy</title>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- External resources -->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://cdn.jsdelivr.net/npm/@genome-spy/app@0.56.x/dist/style.css"
-    />
-    <script
-      type="text/javascript"
-      src="https://cdn.jsdelivr.net/npm/@genome-spy/app@0.56.x/dist/index.js"
-      defer
-    ></script>
+        <!-- External resources -->
+        <link
+            rel="stylesheet"
+            type="text/css"
+            href="https://cdn.jsdelivr.net/npm/@genome-spy/app@0.56.x/dist/style.css" />
+        <script
+            type="text/javascript"
+            src="https://cdn.jsdelivr.net/npm/@genome-spy/app@0.56.x/dist/index.js"
+            defer></script>
 
-    <!-- Application logic -->
-    <script type="module" defer>
-      async function drawPlot(path) {
-        const response = await fetch(path);
-        const spec_data = await response.json();
+        <!-- Application logic -->
+        <script type="module" defer>
+            async function drawPlot(path) {
+                const response = await fetch(path)
+                const spec_data = await response.json()
 
-        if ("bookmarks" in spec_data) {
-          const bookmarks_path = path.replace("spec.json", "bookmarks.json");
-          spec_data.bookmarks.remote.url = bookmarks_path;
-        }
+                if ("bookmarks" in spec_data) {
+                    const bookmarks_path = path.replace(
+                        "spec.json",
+                        "bookmarks.json"
+                    )
+                    spec_data.bookmarks.remote.url = bookmarks_path
+                }
 
-        if ("purity" in spec_data) setPurity(spec_data.purity);
-        if ("ploidy" in spec_data) setPloidy(spec_data.ploidy);
+                if ("purity" in spec_data) setPurity(spec_data.purity)
+                if ("ploidy" in spec_data) setPloidy(spec_data.ploidy)
 
-        console.log(spec_data);
-        const container = document.querySelector(".container");
-        window.GSAPI = await genomeSpyApp.embed(container, spec_data);
-      }
+                console.log(spec_data)
+                const container = document.querySelector(".container")
+                window.GSAPI = await genomeSpyApp.embed(container, spec_data)
+                insertSelector()
+            }
 
-      function setPurity(purity) {
-        document.querySelector("#purity").innerText = purity;
-      }
+            function setPurity(purity) {
+                window.customSelector.querySelector("#purity").innerText =
+                    purity
+            }
 
-      function setPloidy(ploidy) {
-        document.querySelector("#ploidy").innerText = ploidy;
-      }
+            function setPloidy(ploidy) {
+                window.customSelector.querySelector("#ploidy").innerText =
+                    ploidy
+            }
 
-      window.addEventListener("load", async () => {
-        console.log("Page loaded");
-        const selector = document.querySelector("#order-selector");
+            function insertSelector() {
+                const target = document.querySelector(
+                    ".container genome-spy-bookmark-button"
+                )
+                target.after(window.customSelector)
+            }
 
-        if (selector) {
-          selector.addEventListener("change", async function() {
-            const path = this.value;
-            console.log(path);
-            await window.GSAPI.finalize();
-            window.GSAPI = null;
+            window.addEventListener("load", async () => {
+                console.log("Page loaded")
+                const selector = document.querySelector(".order-selector")
 
-            const container = document.querySelector(".container");
-            container.innerHTML = "";
-            const newContainer = document.createElement('div');
-            newContainer.className = 'container';
-            container.parentNode.replaceChild(newContainer, container);
+                if (selector) {
+                    selector.addEventListener("change", async function () {
+                        const path = this.value
+                        console.log(path)
+                        await window.GSAPI.finalize()
+                        window.GSAPI = null
 
-            await drawPlot(path);
-          });
+                        const container = document.querySelector(".container")
+                        container.innerHTML = ""
+                        const newContainer = document.createElement("div")
+                        newContainer.className = "container"
+                        container.parentNode.replaceChild(
+                            newContainer,
+                            container
+                        )
 
-          const first_path = document.querySelector("#order-selector option:first-child").value;
-          await drawPlot(first_path);
-        }
-      });
-    </script>
+                        await drawPlot(path)
+                    })
 
-    <!-- Styles -->
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
+                    const first_path = document.querySelector(
+                        ".order-selector option:first-child"
+                    ).value
+                    window.customSelector = document.querySelector(
+                        ".selector-container"
+                    )
+                    await drawPlot(first_path)
+                }
+            })
+        </script>
 
-      body {
-        background-color: #f0f0f0;
-        position: relative;
-      }
+        <!-- Styles -->
+        <style>
+            * {
+                margin: 0;
+                padding: 0;
+                box-sizing: border-box;
+            }
 
-      .container {
-        box-sizing: border-box;
-        width: 100%;
-        height: 100vh;
-      }
+            body {
+                background-color: #f0f0f0;
+                position: relative;
+            }
 
-      .selector-container {
-        position: absolute;
-        top: 10px;
-        left: 50%;
-        transform: translateX(-50%);
-        z-index: 100;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: row;
-        gap: 10px;
-      }
+            .container {
+                box-sizing: border-box;
+                width: 100%;
+                height: 100vh;
+            }
 
-      .selector-container p {
-        color: white;
-        font-family: sans-serif;
-      }
+            .selector-container {
+                display: none;
+                justify-content: center;
+                align-items: center;
+                flex-direction: row;
+                gap: 10px;
+            }
 
-      .selector-container p:has(span:empty) {
-        display: none;
-      }
-    </style>
-  </head>
+            .selector-container p {
+                color: white;
+                font-family: sans-serif;
+            }
 
-  <body>
-    <div class="selector-container">
-      <select id="order-selector" title="Select item">
-        <!-- Options will be inserted here -->
-      </select>
-      <p>Purity: <span id="purity"></span></p>
-      <p>Ploidy: <span id="ploidy"></span></p>
-    </div>
-    <div class="container"></div>
-  </body>
+            .selector-container p:has(span:empty) {
+                display: none;
+            }
+
+            .container .selector-container {
+                display: flex;
+            }
+        </style>
+    </head>
+
+    <body>
+        <div class="selector-container">
+            <select class="order-selector" title="Select item">
+                <!-- Options will be inserted here -->
+            </select>
+            <p>Purity: <span id="purity"></span></p>
+            <p>Ploidy: <span id="ploidy"></span></p>
+        </div>
+        <div class="container"></div>
+    </body>
 </html>
